--- a/data_explore.ipynb
+++ b/data_explore.ipynb
@@ -240,6 +240,66 @@
    "source": [
     "df.limit(5).toPandas()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distinct_table = df.select(['original_crime_type_name', 'disposition'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agg_df = distinct_table.groupBy('original_crime_type_name').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------------+-----+\n",
+      "|original_crime_type_name|count|\n",
+      "+------------------------+-----+\n",
+      "|            Passing Call|35180|\n",
+      "|            Traffic Stop|13538|\n",
+      "|     Traf Violation Cite|10921|\n",
+      "|       Suspicious Person|10007|\n",
+      "|      Homeless Complaint| 6072|\n",
+      "|              Trespasser| 5840|\n",
+      "|           Audible Alarm| 5775|\n",
+      "|                  22500e| 5651|\n",
+      "|        Well Being Check| 5552|\n",
+      "|         Muni Inspection| 5509|\n",
+      "|      Suspicious Vehicle| 5031|\n",
+      "|         Fight No Weapon| 4199|\n",
+      "|          Noise Nuisance| 4072|\n",
+      "|      Auto Boost / Strip| 2969|\n",
+      "|      Traf Violation Tow| 2915|\n",
+      "|                    Poss| 2851|\n",
+      "|      Mentally Disturbed| 2585|\n",
+      "|             Petty Theft| 2549|\n",
+      "|          Meet W/citizen| 2414|\n",
+      "|       Assault / Battery| 2356|\n",
+      "+------------------------+-----+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "agg_df.orderBy(agg_df['count'].desc()).show()"
+   ]
   }
  ],
  "metadata": {
