finish join stream and update agg df query

--- a/data_explore.ipynb
+++ b/data_explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "4  San Francisco    CA         1     Intersection                           "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,16 +252,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "agg_df = distinct_table.groupBy('original_crime_type_name').count()"
+    "agg_df = distinct_table.groupBy('original_crime_type_name').count()\n",
+    "agg_df = agg_df.orderBy(agg_df['count'].desc())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +299,182 @@
     }
    ],
    "source": [
-    "agg_df.orderBy(agg_df['count'].desc()).show()"
+    "agg_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "radio_code_json_filepath = \"data/radio_code.json\"\n",
+    "radio_code_df = spark.read \\\n",
+    "    .option(\"multiline\",\"true\") \\\n",
+    "    .json(radio_code_json_filepath)\n",
+    "radio_code_df = radio_code_df.withColumnRenamed(\"disposition_code\", \"disposition\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>description</th>\n",
+       "      <th>disposition</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Abated</td>\n",
+       "      <td>ABA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Admonished</td>\n",
+       "      <td>ADM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Advised</td>\n",
+       "      <td>ADV</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Arrest</td>\n",
+       "      <td>ARR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cancel</td>\n",
+       "      <td>CAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>CPSA assignment</td>\n",
+       "      <td>CSA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Cancel</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Cited</td>\n",
+       "      <td>CIT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Criminal Activation</td>\n",
+       "      <td>CRM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Gone on Arrival</td>\n",
+       "      <td>GOA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Handled</td>\n",
+       "      <td>HAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Non-Criminal</td>\n",
+       "      <td>NCR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>No Disposition</td>\n",
+       "      <td>ND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>No Merit</td>\n",
+       "      <td>NOM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Premises Appears Secure</td>\n",
+       "      <td>PAS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Report</td>\n",
+       "      <td>REP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>SFFD Medical Staff Engaged</td>\n",
+       "      <td>SFD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Unable to Locate</td>\n",
+       "      <td>UTL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Vehicle Appears Secure</td>\n",
+       "      <td>VAS</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   description disposition\n",
+       "0                       Abated         ABA\n",
+       "1                   Admonished         ADM\n",
+       "2                      Advised         ADV\n",
+       "3                       Arrest         ARR\n",
+       "4                       Cancel         CAN\n",
+       "5              CPSA assignment         CSA\n",
+       "6                       Cancel          22\n",
+       "7                        Cited         CIT\n",
+       "8          Criminal Activation         CRM\n",
+       "9              Gone on Arrival         GOA\n",
+       "10                     Handled         HAN\n",
+       "11                Non-Criminal         NCR\n",
+       "12              No Disposition          ND\n",
+       "13                    No Merit         NOM\n",
+       "14     Premises Appears Secure         PAS\n",
+       "15                      Report         REP\n",
+       "16  SFFD Medical Staff Engaged         SFD\n",
+       "17            Unable to Locate         UTL\n",
+       "18      Vehicle Appears Secure         VAS"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "radio_code_df.toPandas()"
    ]
   }
  ],
